--- a/alternative-video.html
+++ b/alternative-video.html
@@ -8,9 +8,9 @@
       <center><p>Loading Please Wait to Video File..................</p></center>
    </body>
 </html>
-<!-- Histats.com  START  (aync)-->
+   <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4425861,4,0,0,0,00010000']);
+_Hasync.push(['Histats.start', '1,4993921,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -18,5 +18,5 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4981407&101" alt="hitcounter" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4993921&101" alt="counter statistics" border="0"></a></noscript>
 <!-- Histats.com  END  -->
